<resources>
    <string name="app_name">TestsSystem</string>
    <!-- Auth and reg strings -->
    <string name="login">Логин</string>-
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="auth">Войти</string>
    <string name="u_register"><u>Зарегистрироваться</u></string>
    <string name="u_auth"><u>Войти</u></string>
    <!-- Strings related to login -->
    <string name="passwords_not_equal">Пароли не совпадают.</string>
    <string name="existing_user">Пользователь с таким именем существует.</string>
    <string name="invalid_username">Логин должен быть не менее 3 символов.</string>
    <string name="invalid_password">Пароль должен быть не менее 5 символов.</string>
    <string name="login_failed">Имя пользователя или пароль неверны!</string>
    <!-- Main activity strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tests">Тесты</string>
    <string name="title_profile">Профиль</string>
    <!-- Attributes -->
    <string name="tests_img_content_desc">Кнопка поиска</string>
    <!-- Tests page -->
    <string name="search_hint">Поиск…</string>
    <string name="filters_button_desc">Фильтры</string>
    <string name="test_menu_title">Тесты</string>
    <string name="profile_menu_title">Профиль</string>
    <!-- Profile fragment -->
    <string name="profile_icon_content_desc">Профиль</string>
    <string name="security_settings_title">Безопасность</string>
    <string name="account_settings_title">Аккаунт</string>
    <string name="logout">Выйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
