<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".app.AuthActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:importantForAutofill="noExcludeDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/login"
                android:inputType="text"
                android:id="@+id/login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:id="@+id/password_repeat"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/register_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/u_auth"
                android:id="@+id/auth_sign"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
