<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tests">

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.example.testssystem.android.tests.TestListFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_test_list" >
        <action
            android:id="@+id/action_navigation_tests_to_testFragment"
            app:destination="@id/testFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.testssystem.android.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_securitySettingsFragment"
            app:destination="@id/securitySettingsFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_accountSettingsFragment"
            app:destination="@id/accountSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/accountSettingsFragment"
        android:name="com.example.testssystem.android.profile.AccountSettingsFragment"
        android:label="@string/account_settings_title"
        tools:layout="@layout/fragment_account_settings" />

    <fragment
        android:id="@+id/securitySettingsFragment"
        android:name="com.example.testssystem.android.profile.SecuritySettingsFragment"
        android:label="@string/security_settings_title"
        tools:layout="@layout/fragment_security_settings" />

    <fragment
        android:id="@+id/testFragment"
        android:name="com.example.testssystem.android.tests.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" >
        <argument
            android:name="test"
            app:argType="com.example.testssystem.java.Test"
            app:nullable="false" />
    </fragment>

</navigation>
